fix logo size and overflow

--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ nav {
     nav {
         width: 100%;
         font-size: 1.5rem;
+        min-width: 0;
     }
 }
 
@@ -149,6 +150,7 @@ nav {
     display: inline-flex;
     flex-direction: column;
     margin-bottom: 5rem;
+    padding: 15px;
 }
 
 .skills figcaption {
@@ -160,8 +162,14 @@ nav {
 .skills img {
     width: 25rem;
     margin-bottom: 2rem;
+    padding: 0 2rem;
 }
 
+@media only screen and (max-width: 1024px){
+    .skills img {
+        width: 12rem;
+    }
+}
 /* Projects */
 
 .projects {
